# UAP_MachineLearning

./: .gitignore  README.md  pyproject.toml
src/: landingpage.py
src/pages/: klasifikasi_DenseNet_Model.py  klasifikasi_ResNet_Model.py
