[project]
name = "Uap_modul_6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TheMelonnn", email = "zidanrifardi125@gmail.com"},
]
dependencies = [
    "streamlit==1.37.0",
    "tensorflow>=2.17.0",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false